# semantic-navigator

./: .buildinfo  .cookiecutter.yaml  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Justfile  LICENSE  README.md  SETUP.md  active-learning-example.ipynb  contributing.html  genindex.html  index.html  installation.html  modules.html  objects.inv  paper.md  py-modindex.html  pyproject.toml  search.html  searchindex.js  semantic_navigator.app.html  semantic_navigator.bin.html  semantic_navigator.data.html  semantic_navigator.html
.doctrees/: contributing.doctree  environment.pickle  index.doctree  installation.doctree  modules.doctree  semantic_navigator.app.doctree  semantic_navigator.bin.doctree  semantic_navigator.data.doctree  semantic_navigator.doctree
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml
_modules/: index.html
_modules/semantic_navigator/: data.html  query_embedding.html  train.html
_modules/semantic_navigator/app/: views.html
_sources/: index.rst.txt  modules.rst.txt  semantic_navigator.app.rst.txt  semantic_navigator.bin.rst.txt  semantic_navigator.data.rst.txt  semantic_navigator.rst.txt
_static/: documentation_options.js
docs/: conf.py  installation.rst
infra/: Dockerfile  Justfile
notebooks/: cdp-sea-small-gen.ipynb
semantic_navigator/: __init__.py  constants.py  query_embedding.py  train.py
semantic_navigator/app/: __init__.py  docs.code-workspace  views.py
semantic_navigator/app/static/: loader.css
semantic_navigator/app/templates/: base.html  index.html  results.html  semantic-navigator.code-workspace  train-base.html  train-content.html  train.html
semantic_navigator/data/: __init__.py
semantic_navigator/tests/: test_empty.py
