# package build
# https://peps.python.org/pep-0517/
[build-system]
requires = ["setuptools>=65", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

# package basics
# https://peps.python.org/pep-0621/
[project]
name = "semantic-navigator"
description = "An active learning approach to query and search through large archival datasets."
keywords = []
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MPLv2.0" }
authors = [
  { email = "evamxb@uw.edu", name = "Eva Maxfield Brown" },
  { email = "mgrunde@uw.edu", name = "Madeleine Grunde-McLaughlin" },
  { email = "pestoi@uw.edu", name = "Isabella Pestovski" },
  { email = "lanyizhu@uw.edu", name = "Lanyi Zhu" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Natural Language :: English",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dynamic = ["version"]
dependencies = [
  "cdp-data==0.0.10",
  "flask~=2.2.3",
  "gcsfs",  # no pin, pulled in from cdp-data
  "pyarrow~=12.0.0",
  "sentence-transformers~=2.2.2",
]

[project.urls]
Homepage = "https://github.com/CouncilDataProject/semantic-navigator"
"Bug Tracker" = "https://github.com/CouncilDataProject/semantic-navigator/issues"
Documentation = "https://CouncilDataProject.github.io/semantic-navigator"
"User Support" = "https://github.com/CouncilDataProject/semantic-navigator/issues"

# extra dependencies
# https://peps.python.org/pep-0621/#dependencies-optional-dependencies
[project.optional-dependencies]
lint = [
  "black>=22.3.0",
  "check-manifest>=0.48",
  "ruff>=0.0.216",
  "mypy>=0.790",
  "pre-commit>=2.20.0",
]
test = [
  "coverage>=5.1",
  "pytest>=5.4.3",
  "pytest-cov>=2.9.0",
  "pytest-raises>=0.11",
]
docs = [
  # Sphinx + Doc Gen + Styling
  "m2r2>=0.2.7",
  "Sphinx>=4.0.0",
  "furo>=2022.4.7",
  # Extensions
  "numpydoc",
  "sphinx-copybutton",
  # TODO: Pins
  "docutils>=0.18,<0.19",
]
dev = [
  "ipython>=8.4.0",
  "jupyterlab",
  "umap-learn[plot]~=0.5.3",
]

# entry points
# https://peps.python.org/pep-0621/#entry-points
[project.entry-points."console_scripts"]
semantic-navigator = "semantic_navigator.bin.semantic_navigator:main"
fetch-model-for-sem-nav = "semantic_navigator.bin.fetch_model_for_sem_nav:main"

# build settings
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["*docs/*", "*tests/*", "*notebooks/*", "*infra/*"]

[tool.setuptools.package-data]
"*" = [
  "*.yaml",
  "py.typed",
  "*.tar.gz",
  "*.parquet",
  "*.html",
  "*.min.css",
  "*.min.css.map",
  "*.css",
]

# tools
[tool.black]
line-length = 88

# https://github.com/charliermarsh/ruff
[tool.ruff]
line-length = 88
target-version = "py38"
extend-select = [
    "E",      # style errors
    "F",      # flakes
    "D",      # pydocstyle
    "I001",   # isort
    "UP",     # pyupgrade
    "N",      # pep8-naming
    # "S",    # bandit
    "C",      # flake8-comprehensions
    "B",      # flake8-bugbear
    "A001",   # flake8-builtins
    "RUF",    # ruff-specific rules
    "RUF100", # Unused noqa directive
]
extend-ignore = [
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D103", # Missing docstring in public function
    "D107", # Missing docstring in __init__
    "D203", # 1 blank line required before class docstring
    "D205", # 1 blank line required between summary line and description
    "D212", # Multi-line docstring summary should start at the first line
    "D213", # Multi-line docstring summary should start at the second line
    "D413", # Missing blank line after last section
    "D416", # Section name should end with a colon
]

[tool.ruff.per-file-ignores]
"tests/*.py" = ["D"]

# https://github.com/mgedmin/check-manifest#configuration
[tool.check-manifest]
ignore = [
  ".editorconfig",
  ".pre-commit-config.yaml",
  "CODE_OF_CONDUCT.md",
  "CONTRIBUTING.md",
  "Justfile",
  ".cookiecutter.yaml",
  "*docs/**",
  "*notebooks/*",
  "*infra/*",
]

[tool.mypy]
files = "semantic_navigator/*.py"
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
show_error_codes = true